# kobold-challenge

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: working.ipynb
src/kobold_challenge/: main.py  tools.py
