[project]
name = "kobold-challenge"
version = "0.1.0"
description = "Response to KoBold Metals interview challenge"
authors = [
    {name = "Tristan Goss",email = "tristanjdgoss@gmail.com"}
]
packages = [{ include = "kobold_challenge", from = "src" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas (>=1.1.0,<2.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "contextily (>=1.6.2,<2.0.0)",
    "rasterio (>=1.4.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipynb = "^0.5.1"
ipykernel = "^6.29.5"
notebook = "^7.4.3"
ruff = "^0.11.13"

[tool.poetry.scripts]
challenge = "kobold_challenge.main:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "C90",      # Cyclomatic complexity
    "D",        # pydocstyle
    "E",        # pycodestyle
    "F",        # pyflakes
    "I",        # Sort imports
    "PLR",      # pylint
]
ignore = [
    "D100",  # no module docstring
    "D101",  # no class docstring
    "D103",  # no function docstring
    "D104",  # no package docstring
    "D105",  # no magic method docstring
    "D107",  # no __init__ docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "single"